--- a/Ls.WebServer/Ls.WebServer.csproj
+++ b/Ls.WebServer/Ls.WebServer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -6,8 +6,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\dist\js\app.js" />
+    <None Include="wwwroot\dist\js\libs\jquery-3.4.1.min.js" />
+    <None Include="wwwroot\gulpfile.js" />
+    <None Include="wwwroot\src\css\common.css" />
+    <None Include="wwwroot\src\css\libs\normalize.css" />
+    <None Include="wwwroot\src\index.html" />
+    <None Include="wwwroot\src\js\app.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ls.Common\Ls.Common.csproj" />
+    <ProjectReference Include="..\Ls.Models\Ls.Models.csproj" />
+    <ProjectReference Include="..\Ls.Service\Ls.Service.csproj" />
   </ItemGroup>
 
 </Project>
